--- a/test.ipynb
+++ b/test.ipynb
@@ -2,27 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_community\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mllms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ollama\n\u001b[0;32m----> 3\u001b[0m llm \u001b[38;5;241m=\u001b[39m \u001b[43mollama\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mllama2\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m llm\u001b[38;5;241m.\u001b[39minvoke(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhow can langsmith help with testing?\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "\"\\nAs a world-class programmer, I can offer several ways in which I can help build the new feature for your software application:\\n\\n1. Design and Architecture: I can assist in designing the architecture of the feature, including the overall structure, modules, and APIs. This will ensure that the feature is scalable, maintainable, and easy to integrate with the existing system.\\n2. Technical Leadership: As a technical lead, I can guide the development team in building the feature. I can provide technical direction, make strategic decisions, and ensure that the project stays on track and within budget.\\n3. Code Development: I can write high-quality code for the new feature, using modern programming languages and technologies. I can also review and optimize the code of other developers to ensure that it meets the highest standards of quality and performance.\\n4. Testing and Quality Assurance: I can help write automated tests to ensure that the new feature works as expected. I can also perform manual testing to identify any issues or bugs that may have been missed by the automated tests.\\n5. Debugging and Troubleshooting: If there are any issues with the code, I can use my debugging skills to identify and fix the problems. I can also work with the development team to resolve any issues that may arise during the development process.\\n6. Collaboration and Communication: I can collaborate effectively with the development team, stakeholders, and other technical teams to ensure that everyone is aligned on the project goals and timelines. I can also communicate complex technical concepts to non-technical stakeholders in a clear and concise manner.\\n7. Project Management: I can help manage the project scope, schedule, and budget to ensure that the feature is delivered on time and within budget. I can also provide technical estimates and help prioritize tasks based on their complexity and impact on the project.\\n8. Documentation and Knowledge Sharing: I can create detailed documentation for the new feature, including technical specifications, user manuals, and API documentation. I can also share knowledge with other developers and stakeholders to ensure that everyone has a clear understanding of the feature's requirements and functionality.\\n\\nOverall, my expertise as a world-class programmer can help ensure that the new feature is developed efficiently, effectively, and meets the highest standards of quality and performance.\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import string\n",
     "from langchain_community.llms import Ollama\n",
-    "\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_community.document_loaders import WebBaseLoader\n",
+    "loader = WebBaseLoader(\"https://docs.smith.langchain.com/user_guide\")\n",
+    "docs = loader.load()\n",
     "llm = Ollama(model='llama2')\n",
-    "llm.invoke('how can langsmith help with testing?')"
+    "output_parser = StrOutputParser()\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"You are a world class programmer and you have been tasked with helping build a new feature for a software application.\"),\n",
+    "    (\"user\", \"{input}\")\n",
+    "])\n",
+    "\n",
+    "chain = prompt | llm | output_parser\n",
+    "\n",
+    "response: string = chain.invoke({\"input\": \"how can langsmith help with building the new feature?\"})\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
