--- a/test.ipynb
+++ b/test.ipynb
@@ -22,10 +22,18 @@
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_community.document_loaders import WebBaseLoader\n",
+    "from langchain_community.embeddings import OllamaEmbeddings\n",
+    "from langchain_community.vectorstores import FAISS\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "\n",
     "loader = WebBaseLoader(\"https://docs.smith.langchain.com/user_guide\")\n",
+    "embeddings = OllamaEmbeddings()\n",
     "docs = loader.load()\n",
     "llm = Ollama(model='llama2')\n",
     "output_parser = StrOutputParser()\n",
+    "text_splitter = RecursiveCharacterTextSplitter()\n",
+    "documents = text_splitter.split_documents(docs)\n",
+    "vector = FAISS.from_documents(documents, embeddings)\n",
     "\n",
     "prompt = ChatPromptTemplate.from_messages([\n",
     "    (\"system\", \"You are a world class programmer and you have been tasked with helping build a new feature for a software application.\"),\n",
