--- a/test.ipynb
+++ b/test.ipynb
@@ -25,20 +25,26 @@
     "from langchain_community.embeddings import OllamaEmbeddings\n",
     "from langchain_community.vectorstores import FAISS\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
+    "from langchain_core.documents import Document\n",
+    "from langchain.chains import create_retrieval_chain\n",
+    "\n",
+    "llm = Ollama(model='llama2')\n",
     "\n",
     "loader = WebBaseLoader(\"https://docs.smith.langchain.com/user_guide\")\n",
     "embeddings = OllamaEmbeddings()\n",
     "docs = loader.load()\n",
-    "llm = Ollama(model='llama2')\n",
+    "\n",
     "output_parser = StrOutputParser()\n",
     "text_splitter = RecursiveCharacterTextSplitter()\n",
+    "\n",
     "documents = text_splitter.split_documents(docs)\n",
     "vector = FAISS.from_documents(documents, embeddings)\n",
     "\n",
-    "prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a world class programmer and you have been tasked with helping build a new feature for a software application.\"),\n",
-    "    (\"user\", \"{input}\")\n",
-    "])\n",
+    "prompt = ChatPromptTemplate.from_template({\n",
+    "    (\"input\", \"{input}\"),\n",
+    "    (\"context\", [Document(page_content=\"You are a world class programmer and you have been tasked with helping build a new feature for a software application.\")]),\n",
+    "})\n",
     "\n",
     "chain = prompt | llm | output_parser\n",
     "\n",
