Add document_chain and retrieval_chain to the code

--- a/test.ipynb
+++ b/test.ipynb
@@ -29,6 +29,7 @@
     "from langchain_core.documents import Document\n",
     "from langchain.chains import create_retrieval_chain\n",
     "\n",
+    "\n",
     "llm = Ollama(model='llama2')\n",
     "\n",
     "loader = WebBaseLoader(\"https://docs.smith.langchain.com/user_guide\")\n",
@@ -46,9 +47,14 @@
     "    (\"context\", [Document(page_content=\"You are a world class programmer and you have been tasked with helping build a new feature for a software application.\")]),\n",
     "})\n",
     "\n",
+    "document_chain = create_stuff_documents_chain(llm, prompt)\n",
+    "\n",
+    "retriever = vector.as_retriever()\n",
+    "retrieval_chain = create_retrieval_chain(retriever, document_chain)\n",
+    "\n",
     "chain = prompt | llm | output_parser\n",
     "\n",
-    "response: string = chain.invoke({\"input\": \"how can langsmith help with building the new feature?\"})\n"
+    "response: string = chain.invoke({\"input\": \"how can langsmith help with building the new feature?\"})"
    ]
   },
   {
