Update .gitignore to include settings.json

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-02 20:02:30.493 \n",
+      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+      "  command:\n",
+      "\n",
+      "    streamlit run /Users/natecard/anaconda3/envs/langchain/lib/python3.12/site-packages/ipykernel_launcher.py [ARGUMENTS]\n"
+     ]
+    }
+   ],
    "source": [
     "import streamlit as st\n",
     "from langchain_community.llms import Ollama\n",
@@ -84,13 +96,6 @@
     "                with st.chat_message(\"Human\"):\n",
     "                    st.write(message.content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
